# MyCaffe

./: CMakeLists.txt  README.md  blob.cpp  blob.h  layer.cpp  layer.h  main.cpp  my_model.json  my_model_bn_MLP.json  my_model_bn_cnn.json  net.cpp  net.h  snapshot.pb.cc  snapshot.pb.h  snapshot.proto
